Fix popover button alignment

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -245,6 +245,7 @@ $first-col-width: 200px;
     margin-left: -40px;
     margin-right: 5px;
     align-self: center;
+    padding: 0;
   }
 }
 
